2006-10-14  Ville Vainio  <vivainio@gmail.com>

	* Magic.py, ipython.el: applied first part of Rocky Bernstein's
	patch set for pydb integration.

2006-10-12  Ville Vainio  <vivainio@gmail.com>

	* jobctrl.py: Add new "jobctrl" extension for spawning background
	processes with "&find /". 'import jobctrl' to try it out. Requires
	'subprocess' module, standard in python 2.4+.
	
	* iplib.py (expand_aliases, handle_alias): Aliases expand transitively, 
	so if foo -> bar and bar -> baz, then foo -> baz.

2006-10-09  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/Magic.py (Magic.parse_options): add a new posix option
	to allow parsing of input args in magics that doesn't strip quotes
	(if posix=False).  This also closes %timeit bug reported by
	Stefan.

2006-10-03  Ville Vainio  <vivainio@gmail.com>

	* iplib.py (raw_input, interact): Return ValueError catching for 
	raw_input. Fixes infinite loop for sys.stdin.close() or 
	sys.stdout.close().

2006-09-27  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/irunner.py (InteractiveRunner.run_source): small fixes
	to help in handling doctests.  irunner is now pretty useful for
	running standalone scripts and simulate a full interactive session
	in a format that can be then pasted as a doctest.

	* IPython/iplib.py (InteractiveShell.__init__): Install exit/quit
	on top of the default (useless) ones.  This also fixes the nasty
	way in which 2.5's Quitter() exits (reverted [1785]).

	* IPython/Debugger.py (Pdb.__init__): Fix ipdb to work with python
	2.5.

	* IPython/ultraTB.py (TBTools.set_colors): Make sure that ipdb
	color scheme is updated as well when color scheme is changed
	interactively. 

2006-09-27  Ville Vainio  <vivainio@gmail.com>

	* iplib.py (raw_input): python 2.5 closes stdin on quit -> avoid
    infinite loop and just exit. It's a hack, but will do for a while.

2006-08-25  Walter Doerwald  <walter@livinglogic.de>

	* IPython/Extensions/ipipe.py (ils): Add arguments dirs and files to