@@ -1,7 +1,12 @@
 2006-10-14  Ville Vainio  <vivainio@gmail.com>
 
-	* Magic.py, ipython.el: applied first part of Rocky Bernstein's
-	patch set for pydb integration.
+	* Magic.py, ipython.el: applied first "safe" part of Rocky 
+	Bernstein's patch set for pydb integration.
+
+	* Magic.py (%unalias, %alias): %store'd aliases can now be
+	removed with '%unalias'. %alias w/o args now shows most 
+	interesting (stored / manually defined) aliases last
+	where they catch the eye w/o scrolling.
 
 2006-10-12  Ville Vainio  <vivainio@gmail.com>
 
